# mundy

./: Cargo.toml  Justfile  _typos.toml  build.rs  changelog.md  notes.md  readme.md
.github/workflows/: ci.yml
crates/bevy_mundy/: Cargo.toml  readme.md
crates/bevy_mundy/src/: lib.rs
examples/: readme.md
examples/bevy/: Cargo.toml
examples/bevy/src/: main.rs
examples/egui/: Cargo.toml  index.html
examples/egui/src/: lib.rs  main.rs
examples/wasm/: Cargo.toml  index.html
examples/wasm/src/: main.rs
examples/winit/: Cargo.toml
examples/winit/src/: lib.rs  main.rs
scripts/: check-individual-settings.py
src/: async_rt.rs  callback.rs  callback_utils.rs  color.rs  fallback.rs  impls.rs  interest.rs  lib.rs  once_blocking.rs
src/android/: MundyBackgroundThread.java  MundySupport.java  mod.rs  result.rs  subscription.rs  support.rs
src/doc/: caveats.md
src/freedesktop/: mod.rs
src/macos/: main_thread.rs  mod.rs  observer.rs  preference.rs
src/stream_utils/: dedup.rs  either.rs  mod.rs  scan.rs  unfold_state.rs
src/web/: accent_color.rs  bool.rs  drop_on_main_thread.rs  event_listener.rs  mod.rs  multi_value.rs
src/windows/: com_thread.rs  hook.rs  main_thread.rs  mod.rs
