[package]
name = "egui-example"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_color = "0.14.3"
eframe = "0.29.1"
egui-theme-switch = "0.2.0"
egui_demo_lib = "0.29.1"
egui_extras = "0.29.1"
mundy = { path = "../..", features = ["epaint", "bevy_color"] }
log = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.4"
