[package]
name = "egui-example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bevy_color.workspace = true
eframe = "0.31.0"
egui-theme-switch = "0.3.0"
egui_demo_lib = "0.31.0"
egui_extras = "0.31.0"
mundy = { path = "../..", features = ["epaint", "bevy_color"] }
log = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.4"
